--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@chilkat/ck-node12-win64": "^9.50.84",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "devexpress-richedit": "^20.2.3",
     "devextreme": "^20.2.3",
@@ -20,11 +19,15 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsdom": "^16.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mailcomposer": "^4.0.2",
     "morgan": "~1.9.1",
     "mssql": "^6.2.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.6",
     "path": "^0.12.7",
     "socket.io": "3.0.3"
   }
