--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-kakao": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
     "path": "^0.12.7",
