--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@chilkat/ck-node12-win64": "^9.50.84",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "devexpress-richedit": "^20.2.3",
     "devextreme": "^20.2.3",
