--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@chilkat/ck-node12-win64": "^9.50.84",
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "ejs": "^3.1.3",
     "eml-format": "^0.6.1",
     "express": "4.17.1",
+    "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
